// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExplainCollectionInterval collection interval setting updates should show a success message while updated = true 1`] = `
Array [
  <h2
    class="euiTitle css-1bexacr-euiTitle-l"
  >
    Success! Wait a moment please.
  </h2>,
  <hr
    class="euiHorizontalRule euiHorizontalRule--half euiHorizontalRule--marginLarge css-16ybxy8-euiHorizontalRule-half-l"
  />,
  <div
    class="euiText css-1lo1kz-euiText-m"
  >
    <p>
      As soon as monitoring data appears in your cluster the page will automatically refresh with your monitoring dashboard. This only takes only a few seconds.
    </p>
  </div>,
  <div
    class="euiSpacer euiSpacer--l css-p2o3x6-euiSpacer-l"
  />,
  <span
    aria-label="Loading"
    class="euiLoadingSpinner css-lh9wx8-euiLoadingSpinner-l"
    role="progressbar"
  />,
]
`;

exports[`ExplainCollectionInterval collection interval setting updates should show a waiting indicator while updating = true 1`] = `
Array [
  <h2
    class="euiTitle css-1bexacr-euiTitle-l"
  >
    Monitoring is currently off
  </h2>,
  <span
    class="css-xv0fhq-euiTextColor-subdued"
  >
    <div
      class="euiText css-1lo1kz-euiText-m"
    >
      <p>
        Monitoring provides insight to your hardware performance and load.
      </p>
    </div>
  </span>,
  <hr
    class="euiHorizontalRule euiHorizontalRule--half euiHorizontalRule--marginLarge css-16ybxy8-euiHorizontalRule-half-l"
  />,
  <div
    class="euiText css-1lo1kz-euiText-m"
  >
    <p>
      We checked the cluster settings and found that 
      <code>
        xpack.monitoring.collection.interval
      </code>
       is set to 
      <code>
        -1
      </code>
      .
    </p>
    <p>
      The collection interval setting needs to be a positive integer (10s is recommended) in order for the collection agents to be active.
    </p>
    <p>
      Would you like us to change it and enable monitoring?
    </p>
  </div>,
  <div
    class="euiSpacer euiSpacer--l css-p2o3x6-euiSpacer-l"
  />,
  <div
    class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceAround euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        class="euiButton euiButton--primary euiButton--fill euiButton-isDisabled"
        data-test-subj="enableCollectionInterval"
        disabled=""
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            aria-label="Loading"
            class="euiLoadingSpinner euiButtonContent__spinner css-155ohbx-euiLoadingSpinner-m"
            role="progressbar"
          />
          <span
            class="euiButton__text"
          >
            Turn on monitoring
          </span>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`ExplainCollectionInterval should explain about xpack.monitoring.collection.interval setting 1`] = `
Array [
  <h2
    class="euiTitle css-1bexacr-euiTitle-l"
  >
    Monitoring is currently off
  </h2>,
  <span
    class="css-xv0fhq-euiTextColor-subdued"
  >
    <div
      class="euiText css-1lo1kz-euiText-m"
    >
      <p>
        Monitoring provides insight to your hardware performance and load.
      </p>
    </div>
  </span>,
  <hr
    class="euiHorizontalRule euiHorizontalRule--half euiHorizontalRule--marginLarge css-16ybxy8-euiHorizontalRule-half-l"
  />,
  <div
    class="euiText css-1lo1kz-euiText-m"
  >
    <p>
      We checked the cluster settings and found that 
      <code>
        xpack.monitoring.collection.interval
      </code>
       is set to 
      <code>
        -1
      </code>
      .
    </p>
    <p>
      The collection interval setting needs to be a positive integer (10s is recommended) in order for the collection agents to be active.
    </p>
    <p>
      Would you like us to change it and enable monitoring?
    </p>
  </div>,
  <div
    class="euiSpacer euiSpacer--l css-p2o3x6-euiSpacer-l"
  />,
  <div
    class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceAround euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        class="euiButton euiButton--primary euiButton--fill"
        data-test-subj="enableCollectionInterval"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Turn on monitoring
          </span>
        </span>
      </button>
    </div>
  </div>,
]
`;
